[package]
name = "radiant-utils"
version = "0.1.2"
authors = ["Dennis Möhlmann <dmo479@gmail.com>"]
description = "Radiant example code support library"
documentation = "https://docs.rs/radiant-utils/"
repository = "https://github.com/sinesc/radiant-utils.git"
license = "MIT"

[dependencies]
radiant-rs = "0.11"
num-traits = "0.1"
