[package]
name = "radiant-rs"
version = "0.14.0"
authors = [ "Dennis Möhlmann <dmo479@gmail.com>" ]
description = "Thread-safe Rust sprite rendering engine with a friendly API and custom shader support"
documentation = "https://docs.rs/radiant-rs/"
repository = "https://github.com/sinesc/radiant-rs.git"
license = "MIT"
readme = "README.md"
keywords = [ "sprite", "sprites", "text", "prototyping", "glium" ]
categories = [ "rendering::engine", "game-engines" ]

[features]
default = [ "backend-glium" ]
backend-glium = [ "glium" ]
backend-null = [ ]
serialize-serde = [ "serde", "serde_derive" ]

[dependencies]
glium = { version = "0.22", optional = true }
image = "0.19"
regex = "1.0"
lazy_static = "1.0"
rusttype = { version = "0.6", features = [ "gpu_cache" ] }
unicode-normalization = "0.1.5"
font-loader = "0.7"
enum_primitive = "0.1"
avec = "0.1.0"
palette = "0.4"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
tiled = "0.4"
glium = "0.22"
radiant-utils = { version = "0.4" }

[lib]
name = "radiant_rs"
path = "src/lib.rs"

[[bin]]
doc = false
name = "spritesheet"
path = "tools/spritesheet.rs"

[[example]]
name = "01_empty"
path = "examples/01_empty.rs"

[[example]]
name = "02_sprites"
path = "examples/02_sprites.rs"

[[example]]
name = "03_text"
path = "examples/03_text.rs"

[[example]]
name = "04_matrix"
path = "examples/04_matrix.rs"

[[example]]
name = "05_tiles"
path = "examples/05_tiles.rs"

[[example]]
name = "06_program"
path = "examples/06_program.rs"

[[example]]
name = "07_to_texture"
path = "examples/07_to_texture.rs"

[[example]]
name = "08_postprocessor"
path = "examples/08_postprocessor.rs"

[[example]]
name = "09_combined"
path = "examples/09_combined.rs"

[[example]]
name = "10_multi_window"
path = "examples/10_multi_window.rs"

[[example]]
name = "98_threads"
path = "examples/98_threads.rs"

[[example]]
name = "glium_less"
path = "examples/glium_less.rs"

[[example]]
name = "glium_more"
path = "examples/glium_more.rs"

[[example]]
name = "demo_blobs"
path = "examples/demo_blobs.rs"

[[example]]
name = "demo_glare"
path = "examples/demo_glare.rs"
